frontend/test/should_fail/computations_no_use_before_def_004.grg
procedure muh() : (int)
{
	def var res:int;
	res = 1;
	return(res);
}

rule r : (int)
{	
	modify {
		def var res:int;
		
		eval { 
			(resres) = muh();
			def var resres:int;
			yield res = resres;
		}
		
		return (res);
	}
}
